<resources >
    <string name="app_name" >Gestibank</string>
    <string name="login">Login</string>
    <string name="authentification">Authentification</string>
    <string name="creer_un_compte">Creer un compte</string>
    <string name="name">Name</string>
    <string name="prenom">Prenom</string>
    <string name="button">Button</string>
    <string name="email">Email</string>
    <string name="telephone">Telephone</string>
    <string name="nom">Nom</string>
    <string name="creation_du_compte">Creation du Compte</string>
    <string name="somme">Somme</string>
    <string name="de">De</string>
    <string name="vers">vers</string>
    <string name="convertir">Convertir</string>
    <string name="montant">Montant</string>
    <string name="logo">logo</string>
    <string name="bienvenue_sur_gestibank">Bienvenue sur Gestibank</string>
    <string name="conversion">Conversion</string>
    <string name="nouveau_compte">Nouveau compte</string>
    <string name="cr_er_un_nouveau_compte">Créer un nouveau compte</string>
    <string name="password">password</string>
    <string name="se_connecter">se connecter</string>
    <string name="sivous_avez_d_j_un_compte">Si vous avez déjà un compte,</string>
    <string name="cliquez_ici"><u>cliquez ici</u></string>
    <string name="type_de_compte">Type de compte</string>
    <string name="liste_des_agents">Liste des Agents</string>
    <string name="formulaire_agent">Formulaire Agent</string>
    <string name="cr_er_agent">Créer agent</string>
    <string name="matricule">Matricule</string>
    <string name="matricule2">Matricule</string>
    <string name="mail">Mail</string>
    <string name="email_form">email</string>
    <string name="prenom2">Prenom</string>
    <string name="prenom3">Prenom</string>
    <string name="name2">Name</string>
    <string name="espace_client">Espace Client</string>
    <string name="afficher_agents">Afficher Agents</string>
    <string name="usd">USD</string>
    <string name="espace_admin">Espace Admin</string>
    <string name="liste_des_agents2">Liste des Agents</string>
    <string name="ajouter_agent">Ajouter Agent</string>
    <string name="consulter_les_demandes">Consulter Les Demandes</string>
    <string name="ch_quier">Chéquier</string>
    <string name="historique">Historique</string>
    <string name="changer_mot_de_passe">Changer mot de passe</string>
    <string name="conversion2">Conversion</string>
    <string name="conversion3">Conversion</string>
    <string name="agent">Agent</string>
    <string name="espace_agent">Espace Agent</string>
    <string name="g_rer_chequiers">Gérer chequiers</string>
    <string name="g_rer_demandes">Gérer demandes</string>
    <string name="d_connexion">Déconnexion</string>
    <string name="back">Back</string>
    <string name="nouveau_mot_de_passe">Nouveau mot de passe:</string>
    <string name="ancien_mot_de_passe">Ancien mot de passe:</string>
    <string name="changement_de_mot_de_passe">Changement de mot de passe</string>
    <string name="valider_mdp">Valider</string>
    <string name="Resultat">Resultat</string>
    <string name="login_mdp">Login:</string>

</resources>